Разработка формы правка справочника операторов

--- a/WEB_UI/Areas/Directory/Views/Home/OperatorsWagons.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/OperatorsWagons.cshtml
@@ -28,7 +28,8 @@
     <script src="~/Scripts/module/shared/modal_confirm_form.js"></script>
     <script src="~/Scripts/module/shared/modal_edit_form.js"></script>
 
-    <script src="~/Scripts/module/directory/table_dir_operators_wagons.js"></script>
+    <script src="~/Scripts/module/directory/edit_dir_operators_wagons.js"></script> <!-- Модуль "Форма правки операторов вагона" -->
+    <script src="~/Scripts/module/directory/table_dir_operators_wagons.js"></script> <!-- Модуль "Таблица справочника операторов вагона" -->
     <script src="~/Scripts/view/directory/main_operators_wagons.js"></script>
 
     <script>
