Модуль view_send

--- a/WEB_UI/Content/module/wsd/view_send_cars.css
+++ b/WEB_UI/Content/module/wsd/view_send_cars.css
@@ -1,2 +1,34 @@
 ﻿body {
+
 }
+
+.wagon-busy {
+    text-decoration: line-through;
+}
+
+legend {
+    display: block;
+    width: auto;
+    padding: 0 5px;
+    margin-bottom: 0;
+    font-size: inherit;
+    line-height: inherit;
+    border-bottom: none;
+    text-transform: uppercase;
+}
+
+fieldset {
+    border: 1px groove threedface;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+/*    fieldset > fieldset {
+        border: 1px groove threedface;
+        padding: 5px;
+        border-radius: 3px;
+    }
+
+        fieldset > fieldset legend {
+            text-transform: none;
+        }*/
