Закончил разработку выполнить операцию отправить + перенес в окно WSD

--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -111,8 +111,8 @@
                                     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                         <div class="btn-group mr-2" role="group" aria-label="First group">
                                             <button type="button" class="btn btn-outline-secondary" title="Принять состав на станцию" id="arrival">Приб.</button>
-                                            <button type="button" class="btn btn-outline-secondary" title="Отправить состав со станции" id="sending">Отпр.</button>
-                                            @*<button type="button" class="btn btn-outline-secondary" title="Отправить состав со станции" id="send-sars">Отпр1.</button>*@
+                                            @*<button type="button" class="btn btn-outline-secondary" title="Отправить состав со станции" id="sending">Отпр.</button>*@
+                                            <button type="button" class="btn btn-outline-secondary" title="Отправить состав со станции" id="send-sars">Отпр.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="Дислокация вагонов по станции" id="dislocation">Дисл.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="Роспуск вагонов" id="dissolution">Росп.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="">Выгр.</button>
@@ -404,7 +404,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row operation-sending">
+            <!--<div class="row operation-sending">
                 <div class="col-xl-12 mb-1 mt-1">
                     <div class="card border-secondary mb-1">
                         <div class="card-header">
@@ -476,12 +476,7 @@
                                                                 <input type="datetime" class="form-control" id="operation_detali_sending_lead_time" name="operation_detali_sending_lead_time" />
                                                                 <div class="invalid-feedback"></div>
                                                             </div>
-                                                            @*<div class="col-xl-6 mb-1 text-left">
-                                                                    <label for="operation_detali_sending_stop" class="col-form-label">@IDSRWTResource.title_operation_stop</label>
-                                                                    <input type="datetime" class="form-control" id="operation_detali_sending_stop" name="operation_detali_sending_stop" />
-                                                                    <div class="invalid-feedback"></div>
-                                                                </div>*@
-                                                        </div>
+                </div>
                                                     </fieldset>
                                                 </div>
                                                 <div class="col-xl-9">
@@ -510,7 +505,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="row operation-arrival">
                 <div class="col-xl-12 mb-1 mt-1">
                     <div class="card border-secondary mb-1">
