Разработка операция прибытия.  + отображение вагонов на пути приема

--- a/WEB_UI/Content/module/wsd/table_cars_way.css
+++ b/WEB_UI/Content/module/wsd/table_cars_way.css
@@ -40,6 +40,9 @@ table.dataTable.display tbody tr td a.idle-time-error {
     color: red;
 }
 
+table.dataTable.display tbody tr.wagon-ban {
+    color: #808080;
+}
 /*IE сука не поддерживает*/
 /*:root {
     --idle-station-bg-color: #faf0f0;
