--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -70,6 +70,7 @@
 
     <script src="~/Scripts/module/wsd/table_cars_way.js"></script>          <!-- Модуль "Вагоны на выбранном пути" -->
     <script src="~/Scripts/module/wsd/table_sostav_outer_way.js"></script>  <!-- Модуль "Составы на выбранном перегоне" -->
+    <script src="~/Scripts/module/wsd/table_cars_outer_way.js"></script>    <!-- Модуль "Вагоны на выбранном перегоне" -->
     <script src="~/Scripts/module/wsd/view_arrival_cars.js"></script>       <!-- Модуль "Операция принять" -->
     <script src="~/Scripts/module/wsd/view_send_cars.js"></script>          <!-- Модуль "Операция отправить" -->
 
