Скрыл ссылку на справочник грузополучателей (не доделал справочник)

--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -68,7 +68,8 @@
                             <li><a href='@Url.Action("ExternalStation", "Home", new { Area = "Directory" })'>Внешние станции</a></li>
                             <li><a href="#" class="disabled">Пограничные пункты</a></li>
                             <li><a href="#" class="disabled">Грузоотправители</a></li>
-                            <li><a href='@Url.Action("Shipper", "Home", new { Area = "Directory" })'>Грузополучатели</a></li>
+                            <li><a href='@Url.Action("Shipper", "Home", new { Area = "Directory" })' class="disabled">Грузополучатели</a></li>
+
                         </ul>
                     </li>
                     <li class="has-children">
