--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -24,6 +24,9 @@
     <link href="~/Content/module/wsd/table_cars_outer_way.css" rel="stylesheet" /><!-- CSS стили модуля "Вагоны на перегоне" -->
     <link href="~/Content/module/wsd/table_sostav_outer_way.css" rel="stylesheet" /><!-- CSS стили модуля "Составы на перегоне" -->
     <link href="~/Content/module/wsd/view_arrival_cars.css" rel="stylesheet" /><!-- CSS стили модуля "Операция принять" -->
+
+    <link href="~/Content/module/wsd/view_history_operation_arrival.css" rel="stylesheet" /><!-- CSS стили модуля "История операций принять на станцию" -->
+
     <style>
         .table-directory {
             font-size: 0.8rem;
@@ -75,7 +78,8 @@
     <script src="~/Scripts/module/wsd/view_arrival_cars.js"></script>       <!-- Модуль "Операция принять" -->
     <script src="~/Scripts/module/wsd/view_send_cars.js"></script>          <!-- Модуль "Операция отправить" -->
 
-    <script src="~/Scripts/module/wsd/table_cars_outer_way.js"></script><!-- Модуль "Вагоны на выбранном перегоне" -->
+    <script src="~/Scripts/module/wsd/view_history_operation_arrival.js"></script>  <!-- Модуль "История операций принять" -->
+
 
     <script src="~/Scripts/view/idsrwt/test.js"></script>
 
@@ -236,144 +240,146 @@
             <div id="arrival"></div>
             <div id="sostav"></div>
             <div id="wagons"></div>
+            <div id="history_operation_arrival"></div>
+
 
             @*<div class="text-left">
-                    <form>
-                        <div class="form-row">
-                            <div class="col-md-6 mb-3">
-                                <label for="validationServer01">First name</label>
-                                <input type="text" class="form-control" id="validationServer01" value="Mark" required>
-                                <div class="valid-feedback">
-                                    Looks good!
-                                </div>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="validationServer02">Last name</label>
-                                <input type="text" class="form-control" id="validationServer02" value="Otto" required>
-                                <div class="valid-feedback">
-                                    Looks good!
-                                </div>
+            <form>
+                <div class="form-row">
+                    <div class="col-md-6 mb-3">
+                        <label for="validationServer01">First name</label>
+                        <input type="text" class="form-control" id="validationServer01" value="Mark" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="validationServer02">Last name</label>
+                        <input type="text" class="form-control" id="validationServer02" value="Otto" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-6 mb-3">
+                        <label for="validationServer03">City</label>
+                        <input type="text" class="form-control" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+                        <div id="validationServer03Feedback" class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="validationServer04">State</label>
+                        <select class="custom-select" id="validationServer04" aria-describedby="validationServer04Feedback" required>
+                            <option selected disabled value="">Choose...</option>
+                            <option>...</option>
+                        </select>
+                        <div id="validationServer04Feedback" class="invalid-feedback">
+                            Please select a valid state.
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="validationServer05">Zip</label>
+                        <input type="text" class="form-control" id="validationServer05" aria-describedby="validationServer05Feedback" required>
+                        <div id="validationServer05Feedback" class="invalid-feedback">
+                            Please provide a valid zip.
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-6 mb-3">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                            <label class="form-check-label" for="invalidCheck">
+                                Agree to terms and conditions
+                            </label>
+                            <div class="invalid-feedback">
+                                You must agree before submitting.
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div class="col-md-6 mb-3">
-                                <label for="validationServer03">City</label>
-                                <input type="text" class="form-control" id="validationServer03" aria-describedby="validationServer03Feedback" required>
-                                <div id="validationServer03Feedback" class="invalid-feedback">
-                                    Please provide a valid city.
-                                </div>
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <label for="validationServer04">State</label>
-                                <select class="custom-select" id="validationServer04" aria-describedby="validationServer04Feedback" required>
-                                    <option selected disabled value="">Choose...</option>
-                                    <option>...</option>
-                                </select>
-                                <div id="validationServer04Feedback" class="invalid-feedback">
-                                    Please select a valid state.
-                                </div>
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                <label for="validationServer05">Zip</label>
-                                <input type="text" class="form-control" id="validationServer05" aria-describedby="validationServer05Feedback" required>
-                                <div id="validationServer05Feedback" class="invalid-feedback">
-                                    Please provide a valid zip.
-                                </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                            <label class="form-check-label" for="invalidCheck">
+                                Agree to terms and conditions
+                            </label>
+                            <div class="invalid-feedback">
+                                You must agree before submitting.
                             </div>
                         </div>
-                        <div class="form-row">
-                            <div class="col-md-6 mb-3">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                    <label class="form-check-label" for="invalidCheck">
-                                        Agree to terms and conditions
-                                    </label>
-                                    <div class="invalid-feedback">
-                                        You must agree before submitting.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                    <label class="form-check-label" for="invalidCheck">
-                                        Agree to terms and conditions
-                                    </label>
-                                    <div class="invalid-feedback">
-                                        You must agree before submitting.
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-12 mb-3">
+                        <label for="validationServer0111">First name</label>
+                        <input type="text" class="form-control" id="validationServer0111" value="Mark" required>
+                        <div class="valid-feedback">
+                            Looks good!
                         </div>
-                        <div class="form-row">
-                            <div class="col-md-12 mb-3">
-                                <label for="validationServer0111">First name</label>
-                                <input type="text" class="form-control" id="validationServer0111" value="Mark" required>
-                                <div class="valid-feedback">
-                                    Looks good!
-                                </div>
-                            </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                        <label class="form-check-label" for="invalidCheck">
+                            Agree to terms and conditions
+                        </label>
+                        <div class="invalid-feedback">
+                            You must agree before submitting.
                         </div>
-                        <div class="form-group">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                <label class="form-check-label" for="invalidCheck">
-                                    Agree to terms and conditions
-                                </label>
-                                <div class="invalid-feedback">
-                                    You must agree before submitting.
-                                </div>
-                            </div>
-                        </div>
-                        <button class="btn btn-primary" type="submit">Submit form</button>
-                    </form>
-                </div>*@
+                    </div>
+                </div>
+                <button class="btn btn-primary" type="submit">Submit form</button>
+            </form>
+        </div>*@
             <div id="operation-send">
                 @*<div class="row">
-                        <div class="col-xl-12 mb-1 mt-1">
-                            <div class="card border-secondary mb-1">
+                <div class="col-xl-12 mb-1 mt-1">
+                    <div class="card border-secondary mb-1">
+                        <div class="card-header">
+                            ИСТОРИЯ ОПЕРАЦИЙ "ОТПРАВЛЕНИЕ"
+                        </div>
+                        <div class="card-body">
+                            <div class="card border-primary">
                                 <div class="card-header">
-                                    ИСТОРИЯ ОПЕРАЦИЙ "ОТПРАВЛЕНИЕ"
-                                </div>
-                                <div class="card-body">
-                                    <div class="card border-primary">
-                                        <div class="card-header">
-                                            <form class="form-inline">
-                                                <div class="form-group">
-                                                    <label class="col-form-label-sm mr-2" for="select-date">ПЕРИОД:</label>
-                                                    <span id="select-date" class="mr-2">
-                                                        <input type="datetime" class="form-control-sm" id="date-start" name="date-start">
-                                                        <input type="datetime" class="form-control-sm" id="date-stop" name="date-stop">
-                                                    </span>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label class="col-form-label-sm mr-2" for="station">СТАНЦИЯ ОТПРАВЛЕНИЯ:</label>
-                                                    <div class="input-group">
-                                                        <select class="form-control-sm" id="station" name="station" required></select>
-                                                        <div class="input-group-append">
-                                                            <button type="submit" class="btn btn-sm  btn-primary mb-2" id="view_ways" name="view_ways">
-                                                                <i class="fas fa-retweet" aria-hidden="true"></i>
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </form>
+                                    <form class="form-inline">
+                                        <div class="form-group">
+                                            <label class="col-form-label-sm mr-2" for="select-date">ПЕРИОД:</label>
+                                            <span id="select-date" class="mr-2">
+                                                <input type="datetime" class="form-control-sm" id="date-start" name="date-start">
+                                                <input type="datetime" class="form-control-sm" id="date-stop" name="date-stop">
+                                            </span>
                                         </div>
-                                        <div class="card-body text-dark pl-3 pr-3 table-directory">
-                                            <div class="row">
-                                                <div class="col-xl-12 mb-3 mt-2">
-                                                    <div class="container-fluid mt-3">
-                                                        <div id="park-station"></div>
-                                                    </div>
+                                        <div class="form-group">
+                                            <label class="col-form-label-sm mr-2" for="station">СТАНЦИЯ ОТПРАВЛЕНИЯ:</label>
+                                            <div class="input-group">
+                                                <select class="form-control-sm" id="station" name="station" required></select>
+                                                <div class="input-group-append">
+                                                    <button type="submit" class="btn btn-sm  btn-primary mb-2" id="view_ways" name="view_ways">
+                                                        <i class="fas fa-retweet" aria-hidden="true"></i>
+                                                    </button>
                                                 </div>
                                             </div>
                                         </div>
+                                    </form>
+                                </div>
+                                <div class="card-body text-dark pl-3 pr-3 table-directory">
+                                    <div class="row">
+                                        <div class="col-xl-12 mb-3 mt-2">
+                                            <div class="container-fluid mt-3">
+                                                <div id="park-station"></div>
+                                            </div>
+                                        </div>
                                     </div>
-
                                 </div>
                             </div>
+
                         </div>
-                    </div>*@
+                    </div>
+                </div>
+            </div>*@
 
             </div>
             <div class="row">
