--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -14,6 +14,8 @@
     <link href="~/Content/module/wsd/operation_send.css" rel="stylesheet" /><!-- CSS стили модуля "Операции отправки вагонов на станции АМКР" -->
     <link href="~/Content/module/wsd/table_cars_way.css" rel="stylesheet" /><!-- CSS стили модуля "Вагоны на выбранном пути" -->
 
+    <link href="~/Content/module/wsd/view_history_operation_arrival.css" rel="stylesheet" /><!-- CSS стили модуля "История операций прибытия вагонов на станции АМКР" -->
+
     <link href="~/Content/module/wsd/table_cars_outer_way.css" rel="stylesheet" /><!-- CSS стили модуля "Вагоны на перегоне" -->
     <link href="~/Content/module/wsd/table_sostav_outer_way.css" rel="stylesheet" /><!-- CSS стили модуля "Составы на перегоне" -->
     <link href="~/Content/module/wsd/view_arrival_cars.css" rel="stylesheet" /><!-- CSS стили модуля "Окно выполнения операции принять составов по АМКР" -->
@@ -45,8 +47,8 @@
     <script src="~/Scripts/module/table_tree_way.js"></script>
     <script src="~/Scripts/module/wsd/table_cars_operation.js"></script>    <!-- Модуль "Таблица вагонов по операциям детально" -->
     <script src="~/Scripts/module/wsd/operation_send.js"></script>          <!-- Модуль "Операции отправки вагонов на станции АМКР" -->
-    <script src="~/Scripts/module/wsd/operation_arrival.js"></script>        <!-- Модуль "Операции g вагонов на станции АМКР" -->
 
+    <script src="~/Scripts/module/wsd/view_history_operation_arrival.js"></script><!-- Модуль "Операции g вагонов на станции АМКР" -->
     <script src="~/Scripts/module/wsd/table_cars_way.js"></script>          <!-- Модуль "Вагоны на выбранном пути" -->
     <script src="~/Scripts/module/wsd/table_sostav_outer_way.js"></script>  <!-- Модуль "Составы на выбранном перегоне" -->
     <script src="~/Scripts/module/wsd/table_cars_outer_way.js"></script>    <!-- Модуль "Вагоны на выбранном перегоне" -->
