CSS стили отображения опенраций  + table-report-operation - размер шрифта и цвет  + fieldset - откорректировал отображения цветных линий

--- a/WEB_UI/Content/view/idsrwt/wsd.css
+++ b/WEB_UI/Content/view/idsrwt/wsd.css
@@ -301,13 +301,13 @@ legend {
 }
 
 fieldset {
-    border: 2px groove threedface;
+    border: 2px solid threedface;
     padding: 10px;
     border-radius: 3px;
 }
 
     fieldset > fieldset {
-        border: 1px groove threedface;
+        border: 1px solid threedface;
         padding: 5px;
         border-radius: 3px;
     }
