--- a/WEB_UI/Content/module/wsd/view_arrival_cars.css
+++ b/WEB_UI/Content/module/wsd/view_arrival_cars.css
@@ -2,11 +2,17 @@
 
 }
 
+/*Уменьшить размер таблицы*/
+.table-report-operation {
+    font-size: 0.8rem;
+    color: rgba(51, 29, 53, 0.8);
+}
+
 .wagon-busy {
     text-decoration: line-through;
 }
 
-legend {
+/*legend {
     display: block;
     width: auto;
     padding: 0 5px;
@@ -15,13 +21,13 @@ legend {
     line-height: inherit;
     border-bottom: none;
     text-transform: uppercase;
-}
+}*/
 
-fieldset {
+/*fieldset {
     border: 1px groove threedface;
     padding: 10px;
     border-radius: 3px;
-}
+}*/
 
 /*    fieldset > fieldset {
         border: 1px groove threedface;
