--- a/WEB_UI/Content/module/wsd/view_history_operation_arrival.css
+++ b/WEB_UI/Content/module/wsd/view_history_operation_arrival.css
@@ -1,6 +1,10 @@
 ﻿body {
 }
 
+/*Уменьшить размер таблицы*/
+.table-report-operation {
+    font-size: 0.8rem;
+}
 
 td.details-control {
     background: url('../../../Content/DataTables/media/images/details_open.png') no-repeat center center;
@@ -11,8 +15,7 @@ tr.shown td.details-control {
     background: url('../../../Content/DataTables/media/images/details_close.png') no-repeat center center;
 }
 
-
-.detali-operation {
+/*.detali-operation {
     border-left: 6px solid #8ae;
     border-top: 1px solid #8ae;
     padding: 10px;
@@ -21,49 +24,10 @@ tr.shown td.details-control {
     background-color: #eee;
     border-radius: 4px;
     text-align: left;
-}
-/*Уменьшить размер таблицы*/
-.table-report-operation {
-    font-size: 0.8rem;
-}
-/*
-table.dataTable tbody tr:not(.selected).green.odd, table.dataTable tbody tr:not(.selected).green.even {
-    background-color: #cdffcd;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.green > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.green > .sorting_1 {
-    background-color: #a6ffa6;
-}
-
-table.dataTable.display tbody tr:not(.selected).even.green > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.green > .sorting_1 {
-    background-color: #a6ffa6;
-}
-
-table.dataTable tbody tr:not(.selected).yellow.odd, table.dataTable tbody tr:not(.selected).yellow.even {
-    background-color: #fef9e0;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.yellow > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.yellow > .sorting_1 {
-    background-color: #fdf2ba;
-}
-
-table.dataTable.display tbody tr:not(.selected).even.yellow > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.yellow > .sorting_1 {
-    background-color: #fdf2ba;
-}
-
-table.dataTable tbody tr:not(.selected).red.odd, table.dataTable tbody tr:not(.selected).red.even {
-    background-color: #ffebeb;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.red > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.red > .sorting_1 {
-    background-color: #ffc4c4;
-}
-
-table.dataTable.display tbody tr:not(.selected).even.red > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.red > .sorting_1 {
-    background-color: #ffc4c4;
-}
-
-table.dataTable.display tbody tr td.error {
-    color:red;
 }*/
+/*Уменьшить размер таблицы*/
+/*.table-report-operation {
+    font-size: 0.8rem;
+}*/
+
 
