--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -10,16 +10,21 @@
     @*Подключим модули*@
     <link href="~/Content/module/cblist_station.css" rel="stylesheet" />
     <link href="~/Content/module/table_tree_way.css" rel="stylesheet" />
-    <link href="~/Content/module/wsd/table_cars_operation.css" rel="stylesheet" /><!-- CSS стили модуля "Таблица вагонов по операциям детально" -->
-    <link href="~/Content/module/wsd/operation_send.css" rel="stylesheet" /><!-- CSS стили модуля "Операции отправки вагонов на станции АМКР" -->
-    <link href="~/Content/module/wsd/table_cars_way.css" rel="stylesheet" /><!-- CSS стили модуля "Вагоны на выбранном пути" -->
+    @*<link href="~/Content/module/wsd/table_cars_operation.css" rel="stylesheet" />*@<!-- CSS стили модуля "Таблица вагонов по операциям детально" -->
+    <!--<link href="~/Content/module/wsd/operation_send.css" rel="stylesheet" />--><!-- CSS стили модуля "Операции отправки вагонов на станции АМКР" -->
+
 
     <link href="~/Content/module/wsd/view_history_operation_arrival.css" rel="stylesheet" /><!-- CSS стили модуля "История операций прибытия вагонов на станции АМКР" -->
+    <link href="~/Content/module/wsd/view_history_operation_send.css" rel="stylesheet" /><!-- CSS стили модуля "История операций отправки вагонов на станции АМКР" -->
 
+    <link href="~/Content/module/wsd/table_cars_way.css" rel="stylesheet" /><!-- CSS стили модуля "Вагоны на выбранном пути" -->
     <link href="~/Content/module/wsd/table_cars_outer_way.css" rel="stylesheet" /><!-- CSS стили модуля "Вагоны на перегоне" -->
     <link href="~/Content/module/wsd/table_sostav_outer_way.css" rel="stylesheet" /><!-- CSS стили модуля "Составы на перегоне" -->
+
     <link href="~/Content/module/wsd/view_arrival_cars.css" rel="stylesheet" /><!-- CSS стили модуля "Окно выполнения операции принять составов по АМКР" -->
     <link href="~/Content/module/wsd/view_send_cars.css" rel="stylesheet" /><!-- CSS стили модуля "Окно выполнения операции отправки составов по АМКР" -->
+
+
 }
 
 @section scripts {
@@ -45,15 +50,19 @@
     <script src="~/Scripts/module/shared/modal_confirm_form.js"></script>   <!-- Модуль "Форма сообщений подтверждения" -->
     <script src="~/Scripts/module/cblist_station.js"></script>
     <script src="~/Scripts/module/table_tree_way.js"></script>
-    <script src="~/Scripts/module/wsd/table_cars_operation.js"></script>    <!-- Модуль "Таблица вагонов по операциям детально" -->
-    <script src="~/Scripts/module/wsd/operation_send.js"></script>          <!-- Модуль "Операции отправки вагонов на станции АМКР" -->
+    <!--<script src="~/Scripts/module/wsd/table_cars_operation.js"></script>-->    <!-- Модуль "Таблица вагонов по операциям детально" -->
+    <!--<script src="~/Scripts/module/wsd/operation_send.js"></script>-->          <!-- Модуль "Операции отправки вагонов на станции АМКР" -->
 
-    <script src="~/Scripts/module/wsd/view_history_operation_arrival.js"></script><!-- Модуль "Операции g вагонов на станции АМКР" -->
+
     <script src="~/Scripts/module/wsd/table_cars_way.js"></script>          <!-- Модуль "Вагоны на выбранном пути" -->
     <script src="~/Scripts/module/wsd/table_sostav_outer_way.js"></script>  <!-- Модуль "Составы на выбранном перегоне" -->
     <script src="~/Scripts/module/wsd/table_cars_outer_way.js"></script>    <!-- Модуль "Вагоны на выбранном перегоне" -->
+
     <script src="~/Scripts/module/wsd/view_arrival_cars.js"></script>       <!-- Модуль "Операция принять" -->
     <script src="~/Scripts/module/wsd/view_send_cars.js"></script>          <!-- Модуль "Окно выполнения операции отправки составов по АМКР" -->
+
+    <script src="~/Scripts/module/wsd/view_history_operation_arrival.js"></script>  <!-- Модуль "История операция прием вагонов на станции АМКР" -->
+    <script src="~/Scripts/module/wsd/view_history_operation_send.js"></script>     <!-- Модуль "История операция отправка вагонов на станции АМКР" -->
 
     <script src="~/Scripts/plugins/pl_dialog_confirm.js"></script> <!-- Плагин -->
 
@@ -80,8 +89,8 @@
                         Операции
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" id="operation-send" href="#">@IDSRWTResource.title_operation_send</a>
-                        @*<a class="dropdown-item" id="operation-arrival" href="#">@IDSRWTResource.title_operation_arrival</a>*@
+                        <a class="dropdown-item" id="history-operation-send" href="#">@IDSRWTResource.title_operation_send</a>
+                        <a class="dropdown-item" id="history-operation-arrival" href="#">@IDSRWTResource.title_operation_arrival</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -870,8 +879,8 @@
                 </div>
             </div>
 
-            <div id="rep-operation-send"></div>
-            <div id="rep-operation-arrival"></div>
+            <div id="history-operation-send"></div>
+            <div id="history-operation-arrival"></div>
             <div id="operation-send-cars"></div>
             <div id="operation-arrival-cars"></div>
 
