Исправил замечания тестирование преем\отправка\возврат  Исправил надписи

--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -128,9 +128,9 @@
                                 <form class="form-inline">
                                     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                         <div class="btn-group mr-2" role="group" aria-label="external operations group">
-                                            <button type="button" class="btn btn-outline-secondary" title="Отправить состав со станции" id="send-cars">Отпр.</button>
-                                            <button type="button" class="btn btn-outline-secondary" title="Принять состав на станцию" id="arrival-cars">Приб.</button>
-                                            <button type="button" class="btn btn-outline-secondary" title="Принять состав на станцию" id="return-cars">Возв.</button>
+                                            <button type="button" class="btn btn-outline-secondary" title="Отправить состав со станции АМКР" id="send-cars">Отпр.</button>
+                                            <button type="button" class="btn btn-outline-secondary" title="Принять состав на станцию АМКР" id="arrival-cars">Приб.</button>
+                                            <button type="button" class="btn btn-outline-secondary" title="Вернуть(отменить отправку) вагонов состава отправленного на станции АМКР" id="return-cars">Возв.</button>
                                         </div>
                                         <div class="btn-group mr-2" role="group" aria-label="internal operations  group">
                                             <button type="button" class="btn btn-outline-secondary" title="Дислокация вагонов по станции" id="dislocation">Дисл.</button>
