Модуль составы на подходах  отображение цветом составов вполностью возвращеных

--- a/WEB_UI/Content/module/wsd/table_sostav_outer_way.css
+++ b/WEB_UI/Content/module/wsd/table_sostav_outer_way.css
@@ -86,7 +86,7 @@ table.dataTable.display tbody tr:not(.selected).even.yellow > .sorting_1, table.
     background-color: #fdf2ba;
 }
 
-/*table.dataTable tbody tr:not(.selected).red.odd, table.dataTable tbody tr:not(.selected).red.even {
+table.dataTable tbody tr:not(.selected).red.odd, table.dataTable tbody tr:not(.selected).red.even {
     background-color: #ffebeb;
 }
 
@@ -96,4 +96,4 @@ table.dataTable.display tbody tr:not(.selected).odd.red > .sorting_1, table.data
 
 table.dataTable.display tbody tr:not(.selected).even.red > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.red > .sorting_1 {
     background-color: #ffc4c4;
-}*/
+}
